--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
