--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
@@ -13,7 +14,11 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-react": "^7.0.0"
+  },
   "scripts": {
     "test": "",
     "start": "nodemon server.js"
@@ -23,6 +28,6 @@
     "test",
     "practice"
   ],
-  "author": "Pablo Friss",
+  "author": "Pablo Frias",
   "license": "ISC"
 }
