--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "webpack start": "",
-    "webpack build": ""
+    "build": "webpack --mode production"
   },
   "keywords": [
     "express",
@@ -23,6 +22,10 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   }
