--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "webpack --mode production"
+    "start": "nodemon server.js",
+    "build": "webpack --mode development --watch"
   },
   "keywords": [
     "express",
