Implement csv string generation
Project still requires logic for file writing and reading, client
rendering of the files in storage, data from the files on request,
removal of last commas in csv files, and success page rendering.

--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -8,13 +8,14 @@
     "fs": "0.0.1-security",
     "jQuery": "^1.7.4",
     "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "webpack": "^4.29.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Pablo Frias",
   "license": "ISC"
